refactor(core): enhance null safety and align translations with entry callbacks
- Added `@Nullable` annotations to methods, fields, and parameters across multiple classes for improved static analysis.
- Updated logic in translation methods to check for `entryTranslateCallback` before processing.
- Replaced redundant initializations with `clear()` calls for reuse of mutable objects.
- Refined alignment modules to ensure callback checks before handling translations.

Signed-off-by: Hiroshi Miura <miurahr@linux.com>